# tender-alchemist

./: .dockerignore  .env.example  .gitignore  diagnose_server.py  docker-compose.yml  docx_parser.py  docx_to_clean_html.py  file_reader.py  html_cleaner.py  ministral_client.py  requirements.txt  run_webui.py  utils.py
data/: product_terms.json  style.qss
data/uploads/0ebc27491cd94632bc55e4705da44ec9/: Описание объекта закупки (18).docx
data/uploads/2e7b24f57cbc4c0cb1943a98009d8cb1/: Обоснование Н(М)ЦК (15).xlsx  Описание объекта закупки01.docx
data/uploads/34fb0992e2e142e789a721d6e33fc3ed/: Обоснование Н(М)ЦК компл.xls
data/uploads/5c5a9b5ba3104b5ab8808cc3af21d1aa/: НМЦК_Картриджи.xlsx  ТЗ_Описание объекта закупки.docx
data/uploads/6cc0bc5099d34f3b97d9e77bd8f91319/: Обоснование НМЦК (2).xlsx
deploy/: Dockerfile.docling  Dockerfile.ollama  start.sh
deploy/webui/: Dockerfile  requirements.txt
scripts/: e2e4_ingest.py  run_client.py  run_webui.py  start_webui.sh  test_post.py
searxng/: .env
searxng/config/: settings.yml
src/: README.md  _import_check.py  analysis_worker.py  config.py  docx_parser.py  file_reader.py  gui.py  html_cleaner.py  json_utils.py  main.py  name_normalizer.py  utils.py
src/client_app/: __init__.py  analysis_worker.py  gui.py
src/core/: README.md  __init__.py  analysis_service.py  config.py  docx_parser.py  file_reader.py  html_cleaner.py  json_utils.py  ministral_client.py  name_normalizer.py  pyproject.toml
src/webui/: __init__.py  analysis_service.py  analysis_worker.py  app_impl.py
src/webui/templates/: history.html  (+2 more)
(+6 files in other folders)
